infra/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualserivce
  namespace: argocd
spec:
  hosts:
  - argocd.brandon.local
  gateways:
  - istio-system/test-gateway
  http:
  - route:
    - destination:
        host: argocd-server.argo.svc.cluster.local
        port:
          number: 8080
