infra/deny-all-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-dev
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
